feat(vscode): update config
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/.yarnrc
+++ b/.yarnrc
@@ -2,10 +2,12 @@
 # yarn lockfile v1
 
 
+username mcansh
+email logan@mcan.sh
 init-author-email logan@mcan.sh
 init-author-name "Logan McAnsh"
 init-author-url "https://mcan.sh"
-lastUpdateCheck 1555513972242
+lastUpdateCheck 1559244208531
 version-git-message "%s"
 version-git-sign true
 version-tag-prefix ""
