feat(yarn): update yarnrc to never include `^`
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/.yarnrc
+++ b/.yarnrc
@@ -2,12 +2,15 @@
 # yarn lockfile v1
 
 
-username mcansh
 email logan@mcan.sh
 init-author-email logan@mcan.sh
 init-author-name "Logan McAnsh"
 init-author-url "https://mcan.sh"
+init-license MIT
+init-version "1.0.0"
 lastUpdateCheck 1559244208531
+save-prefix ""
+username mcansh
 version-git-message "%s"
 version-git-sign true
 version-tag-prefix ""
