make 'please' work in fish

--- a/.gitconfig
+++ b/.gitconfig
@@ -60,3 +60,10 @@
   grep = auto
 [rebase]
   autosquash = true
+# Enforce SSH
+[url "ssh://git@github.com/"]
+  insteadOf = https://github.com/
+[url "ssh://git@gitlab.com/"]
+  insteadOf = https://gitlab.com/
+[url "ssh://git@bitbucket.org/"]
+  insteadOf = https://bitbucket.org/
