make yarn-global-upgrade alias actually upgrade things

--- a/.yarnrc
+++ b/.yarnrc
@@ -2,13 +2,14 @@
 # yarn lockfile v1
 
 
+"--global.latest" true
 email logan@mcan.sh
 init-author-email logan@mcan.sh
 init-author-name "Logan McAnsh"
 init-author-url "https://mcan.sh"
 init-license MIT
 init-version "1.0.0"
-lastUpdateCheck 1559690170556
+lastUpdateCheck 1565619206561
 save-prefix ""
 username mcansh
 version-git-message "%s"
