--- a/code/settings.json
+++ b/code/settings.json
@@ -29,22 +29,13 @@
   },
   "workbench.editor.tabCloseButton": "right",
   "emmet.includeLanguages": {
-    "javascript": "javascriptreact",
+    "javascript": "javascriptreact"
   },
   "editor.snippetSuggestions": "top",
   "workbench.editor.enablePreviewFromQuickOpen": false,
   "window.title": "${dirty} ${activeEditorMedium}${separator}${rootName}",
   "atomKeymap.promptV3Features": true,
   "editor.formatOnSave": true,
-  "[typescript]": {
-    "editor.formatOnSave": false
-  },
-  "[typescriptreact]": {
-    "editor.formatOnSave": false
-  },
-  "[javascript]": {
-    "editor.formatOnSave": false
-  },
   "eslint.alwaysShowStatus": true,
   "eslint.autoFixOnSave": true,
   "eslint.packageManager": "yarn",
@@ -55,8 +46,7 @@
       ".jsx",
       "typescript",
       "typescriptreact",
-      "yaml",
-      "mdx"
+      "yaml"
     ]
   },
   "eslint.validate": [
@@ -69,10 +59,6 @@
     },
     {
       "language": "typescriptreact",
-      "autoFix": true
-    },
-    {
-      "language": "mdx",
       "autoFix": true
     }
   ],
@@ -97,7 +83,7 @@
   "npm.enableScriptExplorer": true,
   "workbench.list.keyboardNavigation": "simple",
   "workbench.list.automaticKeyboardNavigation": false,
-  "workbench.colorTheme": "SynthWave '84",
+  "workbench.colorTheme": "DVLPR",
   "editor.suggestSelection": "first",
   "vscode_custom_css.imports": [
     "https://raw.githubusercontent.com/robb0wen/synthwave-vscode/master/synthwave84.css"
