chore: update the things
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/.gitconfig
+++ b/.gitconfig
@@ -60,6 +60,7 @@
   grep = auto
 [rebase]
   autosquash = true
+
 # Enforce SSH
 [url "ssh://git@github.com/"]
   insteadOf = https://github.com/
@@ -67,3 +68,5 @@
   insteadOf = https://gitlab.com/
 [url "ssh://git@bitbucket.org/"]
   insteadOf = https://bitbucket.org/
+[fetch]
+	prune = true
