--- a/.yarnrc
+++ b/.yarnrc
@@ -9,7 +9,8 @@ init-author-name "Logan McAnsh"
 init-author-url "https://mcan.sh"
 init-license MIT
 init-version "1.0.0"
-lastUpdateCheck 1568741966990
+lastUpdateCheck 1570651453164
+save-exact true
 save-prefix ""
 username mcansh
 version-git-message "%s"
