--- a/code/settings.json
+++ b/code/settings.json
@@ -192,7 +192,10 @@
       "name": "Vue Green",
       "value": "#42b883"
     }
-  ]
+  ],
+  "[jsonc]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
   // when working using an external monitor
   // /*
   "editor.fontSize": 16,
