chore: add gpr registry
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/.yarnrc
+++ b/.yarnrc
@@ -9,10 +9,11 @@ init-author-name "Logan McAnsh"
 init-author-url "https://mcan.sh"
 init-license MIT
 init-version "1.0.0"
-lastUpdateCheck 1570824657643
+lastUpdateCheck 1572186974273
 save-exact true
 save-prefix ""
 username mcansh
 version-git-message "%s"
 version-git-sign true
 version-tag-prefix ""
+"@mcansh:registry" "https://npm.pkg.github.com"
