--- a/.yarnrc
+++ b/.yarnrc
@@ -9,11 +9,11 @@ init-author-name "Logan McAnsh"
 init-author-url "https://mcan.sh"
 init-license MIT
 init-version "1.0.0"
-lastUpdateCheck 1572186974273
+lastUpdateCheck 1574966993340
 save-exact true
 save-prefix ""
+unsafe-disable-integrity-migration false
 username mcansh
 version-git-message "%s"
 version-git-sign true
 version-tag-prefix ""
-"@mcansh:registry" "https://npm.pkg.github.com"
