--- a/code/settings.json
+++ b/code/settings.json
@@ -2,7 +2,7 @@
   "window.zoomLevel": -1,
   "editor.fontFamily": "'Dank Mono', 'Operator Mono', 'SF Mono', Menlo, Monaco, 'Courier New', monospace",
   "editor.fontSize": 12,
-  "workbench.colorTheme": "Night Owl",
+  "workbench.colorTheme": "DVLPR",
   "editor.letterSpacing": 0.5,
   "workbench.editor.tabSizing": "shrink",
   "html.format.enable": true,
@@ -32,6 +32,8 @@
   "emmet.includeLanguages": {
     "javascript": "javascriptreact"
   },
+  "workbench.editor.openSideBySideDirection": "right",
+  "workbench.panel.defaultLocation": "bottom",
   "editor.acceptSuggestionOnEnter": "smart",
   "editor.snippetSuggestions": "inline",
   "workbench.editor.enablePreviewFromQuickOpen": false,
@@ -39,7 +41,9 @@
   "atomKeymap.promptV3Features": true,
   "editor.formatOnSave": true,
   "eslint.alwaysShowStatus": true,
-  "eslint.autoFixOnSave": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
   "eslint.packageManager": "yarn",
   "eslint.options": {
     "extensions": [
@@ -55,14 +59,8 @@
     "javascript",
     "javascriptreact",
     "html",
-    {
-      "language": "typescript",
-      "autoFix": true
-    },
-    {
-      "language": "typescriptreact",
-      "autoFix": true
-    }
+    "typescript",
+    "typescriptreact"
   ],
   "color-highlight.markerType": "dot-after",
   "color-highlight.matchWords": true,
@@ -206,7 +204,7 @@
     }
   ],
   "yaml.schemas": {
-    "file:///Users/loganmcansh/.vscode-insiders/extensions/atlassian.atlascode-2.2.0/resources/schemas/pipelines-schema.json": "bitbucket-pipelines.yml"
+    "file:///Users/loganmcansh/.vscode-insiders/extensions/atlassian.atlascode-2.4.2/resources/schemas/pipelines-schema.json": "bitbucket-pipelines.yml"
   },
   "atlascode.jira.jqlList": [
     {
@@ -231,7 +229,31 @@
   "atlascode.jira.statusbar.showLogin": true,
   "atlascode.configurationTarget": "user",
   "atlascode.jira.explorer.enabled": true,
-  "diffEditor.ignoreTrimWhitespace": false
+  "diffEditor.ignoreTrimWhitespace": false,
+  "workbench.colorCustomizations": {
+    "activityBarBadge.background": "#2979FF",
+    "activityBar.activeBorder": "#2979FF",
+    "list.activeSelectionForeground": "#2979FF",
+    "list.inactiveSelectionForeground": "#2979FF",
+    "list.highlightForeground": "#2979FF",
+    "scrollbarSlider.activeBackground": "#2979FF50",
+    "editorSuggestWidget.highlightForeground": "#2979FF",
+    "textLink.foreground": "#2979FF",
+    "progressBar.background": "#2979FF",
+    "pickerGroup.foreground": "#2979FF",
+    "tab.activeBorder": "#2979FF",
+    "notificationLink.foreground": "#2979FF",
+    "editorWidget.resizeBorder": "#2979FF",
+    "editorWidget.border": "#2979FF",
+    "settings.modifiedItemIndicator": "#2979FF",
+    "settings.headerForeground": "#2979FF",
+    "panelTitle.activeBorder": "#2979FF",
+    "breadcrumb.activeSelectionForeground": "#2979FF",
+    "menu.selectionForeground": "#2979FF",
+    "menubar.selectionForeground": "#2979FF",
+    "editor.findMatchBorder": "#2979FF",
+    "selection.background": "#2979FF40"
+  },
   // when working using an external monitor
   /*
   "editor.fontSize": 14,
