chore(vscode): use github theme
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/code/settings.json
+++ b/code/settings.json
@@ -3,10 +3,10 @@
   "editor.fontFamily": "'MonoLisa', 'Dank Mono', 'Operator Mono', 'JetBrains Mono', 'SF Mono', Menlo, Monaco, 'Courier New', monospace",
   "editor.fontSize": 12,
   "window.autoDetectColorScheme": true,
-  "workbench.colorTheme": "Retreon",
+  "workbench.colorTheme": "GitHub Dark",
   "workbench.preferredDarkColorTheme": "GitHub Dark",
-  "workbench.preferredHighContrastColorTheme": "Retreon",
-  "workbench.preferredLightColorTheme": "Retreon",
+  "workbench.preferredHighContrastColorTheme": "GitHub Dark",
+  "workbench.preferredLightColorTheme": "GitHub Dark",
   "editor.letterSpacing": 0.5,
   "workbench.editor.tabSizing": "shrink",
   "html.format.enable": true,
