chore: update git template
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/.gitconfig
+++ b/.gitconfig
@@ -88,4 +88,4 @@
 [pull]
 	rebase = true
 [init]
-	templateDir = ~/.dotfiles/git/template
+	templateDir = /Users/loganmcansh/.dotfiles/git/template.git
