--- a/alfred/Alfred.alfredpreferences/preferences/local/76dea24b85c7d1aae6c5c242975a4c24f3c76055/appearance/prefs.plist
+++ b/alfred/Alfred.alfredpreferences/preferences/local/76dea24b85c7d1aae6c5c242975a4c24f3c76055/appearance/prefs.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>darkthemeuid</key>
-	<string>theme.urlimport.F997A186-01D7-4D46-8D41-5831214F95C1</string>
+	<string>theme.bundled.osxdark</string>
 	<key>lightthemeuid</key>
 	<string>theme.bundled.osx</string>
 </dict>
