chore: update default branch initialization
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/code/settings.json
+++ b/code/settings.json
@@ -148,7 +148,7 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "files.associations": {
-    "*.svelte": "html"
+    "*.svelte": "svelte"
   },
   "peacock.favoriteColors": [
     {
