--- a/code/settings.json
+++ b/code/settings.json
@@ -2,11 +2,11 @@
   "window.zoomLevel": -1,
   "editor.fontFamily": "MonoLisa, 'Dank Mono', 'Operator Mono', 'JetBrains Mono', 'SF Mono', Menlo, Monaco, 'Courier New', monospace",
   "editor.fontSize": 12,
-  "window.autoDetectColorScheme": false,
-  "workbench.colorTheme": "Shades of Purple",
-  "workbench.preferredDarkColorTheme": "Community Material Theme High Contrast",
-  "workbench.preferredHighContrastColorTheme": "Community Material Theme High Contrast",
-  "workbench.preferredLightColorTheme": "Community Material Theme High Contrast",
+  "window.autoDetectColorScheme": true,
+  "workbench.colorTheme": "GitHub Dark",
+  "workbench.preferredDarkColorTheme": "GitHub Dark",
+  "workbench.preferredHighContrastColorTheme": "GitHub Light",
+  "workbench.preferredLightColorTheme": "GitHub Light",
   "editor.letterSpacing": 0.5,
   "workbench.editor.tabSizing": "shrink",
   "html.format.enable": true,
@@ -20,7 +20,7 @@
   "editor.fontWeight": "400",
   "editor.cursorBlinking": "solid",
   "editor.colorDecorators": false,
-  "workbench.activityBar.visible": true,
+  "workbench.activityBar.visible": false,
   "workbench.sideBar.location": "left",
   "workbench.startupEditor": "newUntitledFile",
   "extensions.ignoreRecommendations": false,
@@ -203,7 +203,7 @@
     }
   ],
   "yaml.schemas": {
-    "file:///Users/loganmcansh/.vscode-insiders/extensions/atlassian.atlascode-2.8.3/resources/schemas/pipelines-schema.json": "bitbucket-pipelines.yml"
+    "file:///Users/loganmcansh/.vscode-insiders/extensions/atlassian.atlascode-2.8.4/resources/schemas/pipelines-schema.json": "bitbucket-pipelines.yml"
   },
   "atlascode.jira.jqlList": [
     {
