--- a/.npmrc
+++ b/.npmrc
@@ -1,16 +1,33 @@
+# Registries
 @mcansh:registry=https://npm.pkg.github.com
 @remix-run:registry=https://npm.remix.run
 //npm.pkg.github.com/:_authToken=${GITHUB_REGISTRY_TOKEN}
 //registry.npmjs.org/:_authToken=${NPM_REGISTRY_TOKEN}
 //npm.remix.run/:_authToken=${REMIX_REGISTRY_TOKEN}
+
+# Save exact package version instead of semver range
 save-exact=true
 save-prefix=
-version-git-message=%s
-version-tag-prefix=
+
+# Commit message which is used by npm version when creating version commit.
+message="%s"
+
+# Don't prepend a `v` to the git tag of the release
+tag-version-prefix=""
+
+# Default prereleases to use canary
+preid="canary"
+
+# defaults for npm init
 init-author-name=Logan McAnsh
 init-author-email=logan@mcan.sh
 init-author-url=https://mcan.sh/
 init-version=1.0.0
 init-license=MIT
-scripts-prepend-node-path=true
-tag-version-prefix=""
+
+# scripts-prepend-node-path=true
+
+# Sign all the things with GPG
+sign-git-commit=true
+sign-git-tag=true
+
